fourspm_web/src/components/user-panel/user-panel.scss
@use "../../themes/generated/variables.base.scss" as vars;

.user-info {
  display: flex;
  align-items: center;

  .dx-toolbar-menu-section & {
    padding: 10px 6px;
    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
  }

  .image-container {
    overflow: hidden;
    border-radius: 50%;
    height: 30px;
    width: 30px;
    margin: 0 4px;
    border: 1px solid rgba(0, 0, 0, 0.1);
    box-shadow: 0 1px 3px rgba(0,0,0,0.15);

    .user-image {
      width: 100%;
      height: 100%;
    }
  }

  .user-name {
    font-size: 14px;
    color: white;
    margin: 0 9px;
  }
}

